cleaned up button movement